--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ls.smartform</groupId>
-    <artifactId>smart-form</artifactId>
+    <groupId>com.ls.smartfarm</groupId>
+    <artifactId>smart-farm</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>smartfarm-device</module>
+        <module>smartfarm-common</module>
+        <module>renren-fast</module>
+        <module>smartfarm-gateway</module>
+    </modules>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    
+
 </project>
